--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,5 +18,7 @@
 			<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
 			<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
 		</div>
+
+		<!-- <div class="top-squares news_type" onClick="javascript: localStorage.clear()"></div> -->
 	</span>
 </nav>
