--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,123 +1,159 @@
 /*blocks positioning*/
-	p {
-		padding: 0;
-		margin: 0;
-	}
-	div.feed {
-		overflow: hidden;
-	}
-	div.block {
-		position: relative;
-		z-index: 1;
-		width: 50%;
-		float: left;
-		height: 600px;
-	}
-	news.s11, news.s21,news.s22 {
-		padding: 10px;
-		float: left;
-		position: relative;
-	}
-	news.s11 {
-		width: 50%;
-		height: 405px;
-	}
-	news.s21 {
-		width: 100%;
-		height: 195px;
-	}
-	news.s22 {
-		width: 100%;
-		height: 600px;
-	}
-	.inner-container {
-		display: block;
-		border-radius: 3px;
-		height: 100%;
-		width: 100%;
-		color: #101010;
-		text-decoration: none;
-		background-color: #ddd;
-		overflow: hidden;
-	}
-	.inner-container:hover {
-		text-decoration: none;
-		color: black;
-	}
-	/*//different styles*/
-	news.s11 .inner-container .picture,
-	news.s21 .inner-container .picture,
-	news.s22 .inner-container .picture {
-		background-size: cover;
-		background-position: center center;
-	}
+p {
+	padding: 0;
+	margin: 0;
+}
+div.feed {
+	overflow: hidden;
+}
+div.block {
+	position: relative;
+	z-index: 1;
+	width: 50%;
+	float: left;
+	height: 600px;
+}
+news.s11, news.s21,news.s22 {
+	padding: 10px;
+	float: left;
+	position: relative;
+}
+news.s11 {
+	width: 50%;
+	height: 67.5%;
+}
+news.s21 {
+	width: 100%;
+	height: 32.5%;
+}
+news.s22 {
+	width: 100%;
+	height: 100%;
+}
+.inner-container {
+	display: block;
+	border-radius: 3px;
+	height: 100%;
+	width: 100%;
+	color: #101010;
+	text-decoration: none;
+	background-color: #ddd;
+	overflow: hidden;
+}
+.inner-container:hover {
+	text-decoration: none;
+	color: black;
+}
+/*//different styles*/
+news.s11 .inner-container .picture,
+news.s21 .inner-container .picture,
+news.s22 .inner-container .picture {
+	background-size: cover;
+	background-position: center center;
+}
 
-	news.s11 .inner-container .picture {
-		height: 50%;
+news.s11 .inner-container .picture {
+	height: 50%;
+	width: 100%;
+	border-radius: 3px 3px 0 0;
+}
+news.s21 .inner-container .picture {
+	float: left;
+	height: 100%;
+	width: 48%;
+	margin-right: 4%;
+	border-radius: 3px 0 0 3px;
+}
+news.s22 .inner-container .picture {
+	height: 70%;
+	width: 100%;
+	border-radius: 3px 3px 0 0;
+}
+news.s11 .inner-container .text-container {
+	height: 50%;
+	width: 100%;
+	padding: 2px 10px;
+}
+news.s21 .inner-container .text-container {
+	padding: 5px 10px 5px 0;
+	height: 100%;
+	width: 48%;
+	float: left;
+}
+news.s22 .inner-container .text-container {
+	height: 30%;
+	width: 100%;
+	padding: 10px 20px;
+}
+news[class*=s] .inner-container .text-container .news_title {
+	font-family: 'RobCondBold';
+}
+news.s11 .inner-container .text-container .news_title {
+	margin: 0 0 2px 0;
+	font-size: 18px;
+	line-height: 20px;
+}
+news.s21 .inner-container .text-container .news_title {
+	font-size: 17px;
+	line-height: 19px;
+	margin: 0 0 5px 0;
+}
+news.s22 .inner-container .text-container .news_title {
+	margin: 0 0 5px 0;
+	font-size: 28px;
+	line-height: 30px;
+}
+news[class*=s] .inner-container .text-container .description {
+	font-family: 'RobCondLight';
+}
+news.s11 .inner-container .text-container .description {
+	font-size: 14px;
+	line-height: 18px;
+}
+news.s21 .inner-container .text-container .description {
+	font-size: 13px;
+	line-height: 17px;
+}
+news.s22 .inner-container .text-container .description {
+	font-size: 17px;
+	line-height: 23px;
+}
+
+@media screen and (max-width:500px) and (orientation:portrait) {
+	div.block {
 		width: 100%;
-		border-radius: 3px 3px 0 0;
+		height: 1200px;
 	}
 	news.s21 .inner-container .picture {
-		float: left;
-		height: 100%;
-		width: 48%;
-		margin-right: 4%;
-		border-radius: 3px 0 0 3px;
-	}
-	news.s22 .inner-container .picture {
-		height: 70%;
-		width: 100%;
-		border-radius: 3px 3px 0 0;
-	}
-	news.s11 .inner-container .text-container {
-		height: 50%;
-		width: 100%;
-		padding: 2px 10px;
+		width: 49%;
+		margin-right: 2%;
 	}
 	news.s21 .inner-container .text-container {
-		padding: 5px 10px 5px 0;
-		height: 100%;
-		width: 48%;
-		float: left;
-	}
-	news.s22 .inner-container .text-container {
-		height: 30%;
-		width: 100%;
-		padding: 10px 20px;
-	}
-	news[class*=s] .inner-container .text-container .news_title {
-		font-family: 'RobCondBold';
+		width: 49%;
 	}
 	news.s11 .inner-container .text-container .news_title {
-		margin: 0 0 2px 0;
-		font-size: 18px;
-		line-height: 20px;
-		/*font-weight: 700;*/
+		font-size: 36px;
+		line-height: 40px;
 	}
 	news.s21 .inner-container .text-container .news_title {
-		font-size: 17px;
-		line-height: 19px;
-		margin: 0 0 5px 0;
-		/*font-weight: 700;*/
+		font-size: 34px;
+		line-height: 38px;
 	}
 	news.s22 .inner-container .text-container .news_title {
-		margin: 0 0 5px 0;
-		font-size: 28px;
-		line-height: 30px;
-		/*font-weight: 700;*/
-	}
-	news[class*=s] .inner-container .text-container .description {
-		font-family: 'RobCondLight';
+		font-size: 56px;
+		line-height: 60px;
 	}
 	news.s11 .inner-container .text-container .description {
-		font-size: 14px;
-		line-height: 18px;
+		font-size: 28px;
+		line-height: 36px;
 	}
 	news.s21 .inner-container .text-container .description {
-		font-size: 13px;
-		line-height: 17px;
+		font-size: 26px;
+		line-height: 34px;
 	}
 	news.s22 .inner-container .text-container .description {
-		font-size: 17px;
-		line-height: 23px;
+		font-size: 34px;
+		line-height: 46px;
 	}
+
+}
