--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -1,8 +1,8 @@
 .modal-high {
     opacity: 1;
-    -webkit-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    transition: opacity 0.5s;
+    display: none;
+    z-index: 9999;
+    position: relative;
 }
 .modal-high p {
     padding: 0;
@@ -28,6 +28,7 @@
     z-index: 9999;
     box-shadow: 0 2px 5px rgba(0,0,0,.5);
     border-radius: 5px;
+
 }
 .modal-_header {
     border-radius: 5px 5px 0 0;
@@ -54,7 +55,7 @@
     text-shadow: 0 1px 2px rgba(0,0,0,.5);
     margin-top: 100px;
     position: relative;
-    top: 10px;
+    top: 0px;
     transition: all .4s;
     -moz-transition: all .4s;
     -webkit-transition: all .4s;
@@ -117,9 +118,47 @@
     background: rgba(206, 82, 81, 1);
     border-bottom-right-radius: 5px;
 }
-.hid {
-    opacity: 0;
+._show {
+    display: block;
 }
-.destroy {
-    display: none;
+
+@media screen and (max-width:500px) and (orientation:portrait) {
+    .tk-modal {
+        width: 800px;
+        height: 900px;
+    }
+    .greet {
+        height: 350px;
+        line-height: 350px;
+    }
+    .greet span {
+        line-height: 40px;
+        font-size: 35px;
+        font-family: 'RobCondBold';
+    }
+    .greet span i {
+        font-size: 25px;
+        font-family: 'RobCondLight';
+    }
+    .greet .hello {
+        font-family: 'RobCondBold';
+        font-size: 45px;
+        line-height: 55px;
+        margin-bottom: 60px;
+    }
+    .near {
+        height: 500px;
+    }
+    .near .mode {
+        font-size: 60px;
+        margin-top: 110px;
+        top: 0px;
+    }
+    .near .desc {
+        font-size: 25px;
+        margin-top: 20px;
+        opacity: 1;    
+        top: 0px;
+    }
+
 }
