--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,49 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<link rel="stylesheet" href="/stylesheets/fonts.css">
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Вами было забредено не туда</title>
+</head>
+<body>
+	<div class="error">
+		<span>ВАМИ БЫЛО ЗАБРЕДЕНО НЕ ТУДА</span>
+	</div>
+	
+</body>
+
+<style>
+	
+	body, html {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		background: url(/images/error_image.jpg) center center;
+		background-size: cover;
+	}
+	.error {
+		width: 500px;
+		height: 300px;
+		margin: auto;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		position: absolute;
+		line-height: 300px;
+	}
+	.error span {
+		background: rgba(0,0,0,.5);
+		display: inline-block;
+		padding: 20px 40px;
+		font-size: 40px;
+		line-height: 45px;
+		vertical-align: middle;
+		text-align: center;
+		color: #fff;
+		box-shadow: 0px 0px 10px rgba(255,255,255,.5);
+		font-family: 'RobCondBold';
+	}
+</style>
+</html>
