--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -21,8 +21,7 @@ div.page .misc {
 	padding: 0 10px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	
+	box-sizing: border-box;	
 }
 .list {
 	background-color: #e9e9e9;
@@ -48,6 +47,9 @@ div.page .misc {
 .post .content {
 	font: 16px/24px 'RobCondLight', sans-serif;
 	margin-top: 10px;
+}
+.post .content h3 {
+	font-family: 'RobCondBold';
 }
 .tag-title {
 	font-family: 'RobCondBold';
