добавлена обработка заходов

--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -1,11 +1,16 @@
 <% stylesheet('/stylesheets/modal.css') -%>
 <script>
-    tk.controller('modalCtrl',['$rootScope', '$scope', 'localStorageService', '$timeout',
-        function(rSc, sc, lsS, $timeout) {
+    tk.controller('modalCtrl',['$rootScope', '$scope', 'localStorageService', '$timeout', '$location', 
+        function(rSc, sc, lsS, $timeout, $location) {
+
+        search_value = $location.path() ? $location.path().slice(1) : null;
         
         rSc.$watch('news_type', function(value) {
             if (value) {
                 sc.news_type = value;
+            } 
+            else if (!value && search_value) {
+                rSc.news_type = sc.news_type = search_value;
             }
         })
         sc.chooseType = function(type) {
