--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -15,6 +15,23 @@
 	width: 50%;
 	border-top: cyan;
 }
+news.s11, news.s21,news.s22 {
+	padding: 10px;
+	float: left;
+	position: relative;
+}
+news.s11 {
+	width: 50%;
+	height: 405px;
+}
+news.s21 {
+	width: 100%;
+	height: 195px;
+}
+news.s22 {
+	width: 100%;
+	height: 600px;
+}
 .promises {
 	width: 100%;
 	height: 40px;
@@ -22,7 +39,31 @@
 	text-align: center;
 }
 .button-bottom-panel {
-	padding: 40px 0;
+	padding: 20px 10px;
+}
+.button-top-panel {
+	padding: 20px 10px;
+}
+.button-top-panel > * {
+	padding: 5px 10px;
+	margin-right: 10px;
+	font-size: 18px;
+	font-family: 'RobCondBold';
+	outline: none;
+	border: 2px solid transparent;
+	color: #ddd;
+	box-shadow: 0 2px 5px rgba(0,0,0,.5);
+	text-shadow: 0 1px 4px rgba(0,0,0,.5);
+}
+.button-top-panel .normal-button {
+	background-color: #5F6BFF;
+}
+.button-top-panel .special-button {
+	background-color: #FF524A;
+}
+.selected {
+	border: 2px solid black;
+	box-shadow: 0 2px 10px rgba(0,0,0,.9);
 }
 p.labels {
 	margin: 10px 0 0;
@@ -48,6 +89,9 @@ button.size-change {
 button.highlighted {
 	background-color: #2980b9;
 }
+.list-page, .create-page {
+	padding: 0px 10px;
+}
 .news-in-list {
 	clear: both;
 	background-color: #ddd;
@@ -55,6 +99,10 @@ button.highlighted {
 	width: 100%;
 	overflow: hidden;
 	margin-bottom: 10px;
+}
+.news-in-list p.title {
+	font-family: 'RobCondBold';
+	font-size: 18px;
 }
 .image-info, .info {
 	float: left;
