--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,71 +3,82 @@
 <% script("/javascripts/utils.js") -%>
 <% script("/javascripts/admin.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
+<% stylesheet("/stylesheets/fonts.css") -%>
 <% stylesheet("/stylesheets/index.css") -%>
 <% stylesheet("/stylesheets/admin.css") -%>
 <% stylesheet("/libs/fontawesome/css/font-awesome.min.css") -%>
 
 <div class="admin-page" ng-controller="Admin">
-	<div class="promises" ng-if="successful_save" ng-class="{ success : successful_save }"><p>Новость успешно сохранена</p></div>
-	<div class="button_panel">
-		<button ng-click="page='create_page'; news = {};">create</button>
-		<button ng-click="page='feed_page'">feed</button>
-		<button ng-click="page='list_page'">list</button>
+
+	<div class="promises" ng-if="successful_save" ng-class="{ success : successful_save }">
+		<p>Новость успешно сохранена</p>
 	</div>
 
-	<div ng-show="page=='create_page'">
-		<h1>СОЗДАНИЕ/РЕДАКТИРОВАНИЕ НОВОСТИ</h1>
+	<div class="button-top-panel">
+		<button ng-class="{ selected : page=='create_page' }" class="normal-button" ng-click="page='create_page'; news = {};">СОЗДАНИЕ</button>
+		<button ng-class="{ selected : page=='feed_page' }" class="normal-button" ng-click="page='feed_page'">ВИД ГЛАВНОЙ СТРАНИЦЫ</button>
+		<button ng-class="{ selected : page=='list_page' }" class="normal-button" ng-click="page='list_page'">СПИСОК</button>
+	</div>
 
-		<div>
-			<button ng-click="new_type='normal'">Нормальная</button>
-			<button ng-click="new_type='special'">Для особенных</button>
+	<div class="button-top-panel">
+			<button class="normal-button" ng-class="{ selected : news_type=='normal' }" ng-click="news_type='normal'">НОРМАЛЬНЫЙ РЕЖИМ</button>
+			<button class="special-button" ng-class="{ selected : news_type=='special' }" ng-click="news_type='special'">СПЕЦИАЛЬНЫЙ РЕЖИМ</button>
 		</div>
 
+	<div ng-show="page=='create_page'" class="create-page">
+		<h1>СОЗДАНИЕ/РЕДАКТИРОВАНИЕ НОВОСТИ</h1>
+
+		<!-- <div class="button-top-panel">
+			<button class="normal-button" ng-class="{ selected : news_type=='normal' }" ng-click="news_type='normal'">НОРМАЛЬНАЯ НОВОСТЬ</button>
+			<button class="special-button" ng-class="{ selected : news_type=='special' }" ng-click="news_type='special'">СПЕЦИАЛЬНАЯ НОВОСТЬ</button>
+		</div> -->
 
 		<div class="input">
-			<div ng-show="new_type=='normal'">
-				<p class="labels">Title</p>
+			<div ng-show="news_type=='normal'">
+				<p class="labels">Заголовок</p>
 				<input type="text" 
 					   ng-model="news.title">
-				<p class="labels">Description</p>
+				<p class="labels">Описание</p>
 				<textarea ng-model="news.description"></textarea>
-				<p class="labels">Image</p>
+				<p class="labels">Картинка</p>
 				<input type="text" 
 					   ng-model="news.image">
-				<p class="labels">Content</p>
+				<p class="labels">Контент</p>
 				<textarea ui-tinymce="tinymce_options"
 					   	  ng-model="news.content"></textarea>
 			</div>
-			<div ng-show="new_type=='special'">
-				<p class="labels">Title</p>
+			<div ng-show="news_type=='special'">
+				<p class="labels">Заголовок для особенных</p>
 				<input type="text" 
 					   ng-model="news.title_special">
-				<p class="labels">Description</p>
+				<p class="labels">Описание особенное</p>
 				<textarea ng-model="news.description_special"></textarea>
-				<p class="labels">Image</p>
+				<p class="labels">Картинка особенная</p>
 				<input type="text" 
 					   ng-model="news.image_special">
-				<p class="labels">Content</p>
+				<p class="labels">Контент для особенных</p>
 				<textarea ui-tinymce="tinymce_options"
 					   	  ng-model="news.content_special"></textarea>
 			</div>
-			<div class="button-bottom-panel">
-				<button ng-if="!news._id" 
+			<div class="button-top-panel">
+				<button class="normal-button" 
+						ng-if="!news._id" 
 						ng-click="postNews(news, true)">Сохранить
 				</button>
-				<button ng-if="news._id" 
+				<button class="normal-button" 
+						ng-if="news._id" 
 						ng-click="postNews(news)">Изменить
 				</button>
 			</div>
 		</div>
 		<div class="output">
-			<news ng-model="news" type="new_type" class="s11"></news>
-			<news ng-model="news" type="new_type" class="s21"></news>
-			<news ng-model="news" type="new_type" class="s22"></news>
+			<news ng-model="news" type="news_type" class="s11"></news>
+			<news ng-model="news" type="news_type" class="s21"></news>
+			<news ng-model="news" type="news_type" class="s22"></news>
 		</div>
 	</div>
 	<div ng-if="page=='feed_page'" ng-init="loadForPage(true)">
-		<h1>НОВОСТНОЙ ФИД</h1>
+		<h1 style='padding-left : 10px'>НОВОСТНОЙ ФИД</h1>
 		
 		<div class="feed">
 			<div ng-repeat="block in feed_blocks"
@@ -93,16 +104,27 @@
 		</div>
 	</div>
 
-	<div ng-if="page=='list_page'" ng-init="loadForPage()"> 
+	<div class="list-page" ng-if="page=='list_page'" ng-init="loadForPage()"> 
 		<h1>СПИСОК ВСЕХ НОВОСТЕЙ</h1>
+
+		<!-- <div class="button-top-panel">
+			<button class="normal-button" ng-class="{ selected : news_type=='normal' }" ng-click="news_type='normal'">НОРМАЛЬНЫЕ НОВОСТИ</button>
+			<button class="special-button" ng-class="{ selected : news_type=='special' }" ng-click="news_type='special'">СПЕЦИАЛЬНЫЕ НОВОСТИ</button>
+		</div> -->
+
 		<div ng-repeat="news in feeds" class="news-in-list">
 			
-			<div class="image-info" style="background-image: url({{ news.image }})"></div>
+			<div ng-if="news_type=='normal'" class="image-info" style="background-image: url({{ news.image }})"></div>
+			<!-- // -->
+			<div ng-if="news_type=='special'" class="image-info" style="background-image: url({{ news.image_special }})"></div>
 			<span class="info">
-					<p>{{ news.title }}</p>
-					<p>{{ news.description }}</p>
+					<p class="title" ng-if="news_type=='normal'">{{ news.title }}</p>
+					<p ng-if="news_type=='normal'">{{ news.description }}</p>
+					<!-- // -->
+					<p class="title" ng-if="news_type=='special'">{{ news.title_special }}</p>
+					<p ng-if="news_type=='special'">{{ news.description_special }}</p>
 
-				<span class = "button-block">
+				<span class="button-block">
 					<button ng-click="deleteNews(news._id)">Удалить</button>
 					<button ng-click="loadToFormForUpdate(news)">Редактировать</button>
 					<button><a href="/post/{{ news._id }}">Перейти в новость</a></button>
