крупный рефакторинг рутскоупа

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -74,7 +74,6 @@
 		<!-- <div class="fb-like-box" data-href="https://www.facebook.com/tvoykosmos" data-width="272" data-height="200" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div> -->
 	</aside>
 </div>
-<script src="//vk.com/js/api/openapi.js?115"></script>
 <!--<script>
 	(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
@@ -84,8 +83,9 @@
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));
 </script> -->
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+<script async>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 </script>
+<script src="//vk.com/js/api/openapi.js?115"></script>
 <script type="text/javascript">
 VK.Widgets.Group("vk_groups", {mode: 0, width: "272", height: "200",color1: 'E5E5E5', color2: '2B587A', color3: '5B7FA6'}, 75281223);
 </script>
