--- a/views/base.ejs
+++ b/views/base.ejs
@@ -7,8 +7,7 @@
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
-	<script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
-	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-54121517-1', 'auto');ga('send', 'pageview',{'page':location.pathname+location.search+location.hash});</script>
+	<script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error = console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
 	<script>
 		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
 	</script> 
@@ -51,4 +50,5 @@
 		</div>
 
 	</body>
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-54121517-1', 'auto');ga('send', 'pageview',{'page':location.pathname+location.search+location.hash});</script>
 </html>
