--- a/views/content.ejs
+++ b/views/content.ejs
@@ -6,7 +6,9 @@
 <% script("/javascripts/utils.js") -%>
 <% script("/javascripts/content.js") -%>
 <% script("/javascripts/share.js") -%>
-<% block('meta', partial('meta')) -%>	
+<% block('meta', partial('meta')) -%>
+<% block('title', post.title) -%>
+
 
 
 <% stylesheet("/stylesheets/content.css") -%>
