bug fix description normal post

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -30,7 +30,7 @@
 		</div>
 		<div class="date">Редактор произвел новость {{ post.date }}</div>
 
-		<div class="description" ng-if="news_type=='normal || !news_type'">
+		<div class="description" ng-if="news_type=='normal' || !news_type'">
 			<%- post.description %>
 		</div>
 		<div class="description" ng-if="news_type=='special'">
