--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -1,4 +1,3 @@
-<title><%- post.title %></title>
 <meta name="robots" content="index,follow" />
 <meta name="title" content="<%- post.title %>" />
 <meta name="description" content="<%- post.description %>" />
@@ -11,5 +10,5 @@
 <meta property="og:url" content="/post/<%- post._id %>" />
 <meta property="og:image" content="<%- post.image %>" />
 <meta property="og:description" content="<%- post.description %>" />
-<meta property="og:site_name" content="TvoyKosmos" />
+<meta property="og:site_name" content="Твой Космос" />
 
