исправлены косяки в написании слов в мета

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- layout('base.ejs') %>
-<% block('title', 'Твой Космос | Новостное научно-популярное издение о науке и космосе') -%>
 <% script("/javascripts/utils.js") -%>
 <% script("/javascripts/index_page.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
 <% stylesheet("/stylesheets/index.css") -%>
 <%- block('meta', partial('meta_index'))%>
+<% block('title', 'Твой Космос | Новостное научно-популярное издание о науке и космосе') -%>
 
 <div ng-app="tvoyKosmos" ng-controller="Index" ng-init="init()">	
 	<div class="feed">
