--- a/views/base.ejs
+++ b/views/base.ejs
@@ -4,6 +4,7 @@
 	<title><%- blocks.title %></title>
 	<meta charset="UTF-8"> 
 	<meta name="viewport" content="width=device-width">
+	<meta name='yandex-verification' content='6a84d93f583861d0' />
 	<%- blocks.meta %>
 
 	<script src="/libs/angular/angular.min.js"></script>
