--- a/views/base.ejs
+++ b/views/base.ejs
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8"> 
 	<meta name="viewport" content="width=device-width">
 	<meta name='yandex-verification' content='6a84d93f583861d0' />
+	<meta name="google-site-verification" content="fIuECLlWuqQ7kWDa8qMxb4Rx0-jfkgJampGxvkrKJ1k" />
 	<%- blocks.meta %>
 
 	<script src="/libs/angular/angular.min.js"></script>
