--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -32,6 +32,7 @@ news.s22 {
 }
 .inner-container {
 	display: block;
+	position: relative;
 	border-radius: 3px;
 	height: 100%;
 	width: 100%;
@@ -45,6 +46,33 @@ news.s22 {
 	color: black;
 }
 /*//different styles*/
+news.s11 .inner-container .special_mark,
+news.s21 .inner-container .special_mark,
+news.s22 .inner-container .special_mark {
+	position: absolute;
+	top: 10px;
+	color: #fff;
+	font-family: 'RobCondBold';
+	background-color: rgb(206, 82, 81);
+	text-shadow: 0 1px 2px rgba(0,0,0,.5);
+}
+news.s11 .inner-container .special_mark {
+	right: 0;
+	padding: 2px 10px;
+	font-size: 16px;
+}
+news.s21 .inner-container .special_mark {
+	left: 0;
+	padding: 2px 10px;
+	font-size: 16px;
+}
+news.s22 .inner-container .special_mark {
+	right: 0;
+	top: 20px;	
+	padding: 5px 15px;
+	font-size: 20px;
+}
+
 news.s11 .inner-container .picture,
 news.s21 .inner-container .picture,
 news.s22 .inner-container .picture {
