изменений полный набор

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -3,7 +3,7 @@
 	line-height: 150px;
 	width: 100%;
 	background-image: url(/images/header-image.jpg);
-	background-size: 100%
+	background-size: contain;
 	background-position-x: center;
 	background-attachment: fixed;
 }
