--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
 			</div>
 			<div class="sections">
 				<a class="space" href="/?section=space">космос</a>
-				<a class="science" href="/?section=science">наука</a>
+				<a class="physics" href="/?section=physics">физика</a>
 				<a class="tech" href="/?section=tech">технологии</a>
 			</div>
 		</div>
