добалвена мобильная версия

--- a/views/base-mobile.ejs
+++ b/views/base-mobile.ejs
@@ -4,7 +4,8 @@
 	<meta name="viewport" content="width=320, user-scalable=0">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/stylesheets/fonts.css">
-	<title></title>
+	<%- stylesheets%>
+	<title>Твой Космос | Новостное научно-популярное издание о науке и космосе</title>
 </head>
 <body>
 	<%- partial('header-mobile')%>
