--- a/views/header-mobile.ejs
+++ b/views/header-mobile.ejs
@@ -1,4 +1,4 @@
-<header>ТВОЙ КОСМОС</header>
+<header><a href="/">ТВОЙ КОСМОС</a></header>
 
 <style>
 	
@@ -7,13 +7,16 @@
 		font-size: 30px;
 		height: 60px;
 		line-height: 60px;
-		background-image: url(/images/header-image.jpg);
-		background-size: 100%
-		background-position-x: center;
-		background-attachment: fixed;
+		background: url(/images/header-image.jpg) no-repeat;
+		background-size: cover;
+		background-position-x: top;
+		box-shadow: 0 2px 4px rgba(0,0,0,.5);
 		color: white;
 		padding: 0px 20px;
-
+	}
+	header a {
+		text-decoration: none;
+		color: white;
 	}
 
 </style>
