добавлена овл карусель и стили для мобилы

--- a/views/index-mobile.ejs
+++ b/views/index-mobile.ejs
@@ -21,11 +21,11 @@
 	}
 	.each-post {
 		margin-bottom: 10px;
-		height: 80px;
-		border-radius: 8px;
+		height: 70px;
+		border-radius: 4px;
 		overflow: hidden;
 		background-color: #fff;
-		border: 1px solid #ddd;
+		border: 1px solid rgba(0,0,0,.15);
 	}
 	.each-post p {
 		padding: 0;
@@ -39,15 +39,15 @@
 		float: left;
 	}
 	.each-post .photo {
-		height: 80px;
-		width: 80px;
+		height: 70px;
+		width: 70px;
 		background-size: 100%;
 		background-position: center center;
 		background-size: cover;
 	}
 	.each-post .text {
 		padding: 0px 10px;
-		line-height: 80px;
+		line-height: 70px;
 	}
 	.each-post .text span._title {
 		display: inline-block;
