--- a/views/content-mobile.ejs
+++ b/views/content-mobile.ejs
@@ -1,32 +1,64 @@
 <%- layout('base-mobile') %>
+
+<% script("/libs/jquery/dist/jquery.min.js") -%>
+<% script("/libs/owl-carousel/owl-carousel/owl.carousel.min.js") -%>
 <% stylesheet("/libs/fontawesome/css/font-awesome.min.css") -%>
+<% stylesheet("/libs/owl-carousel/owl-carousel/owl.carousel.css") -%>
+<% stylesheet("/libs/owl-carousel/owl-carousel/owl.theme.css") -%>
+
+<script>
+	$(document).ready(function() {
+   	    $("#slider").owlCarousel();
+	});
+</script>
 
 <div class="post">
+	<div class="image-title" style="background-image: url(<%- post.image %>)"></div>
 	<h1 class='title'><%- post.title %></h1>
-	<div class="info">
+	<!-- <div class="info">
 		<span class="time">Добавлено <%- moment(post.date).locale('ru').calendar().toLowerCase() %>
 		</span>
 		<span class="views">
 			<span class="fa fa-eye"></span>
 			<span><%- post.views %></span>
 		</span>
-	</div>
+	</div> -->
 	<div class="content"><%- post.content %></div>
+</div>
+<div class="popular">
+	<p class="title-tag">Популярное за неделю</p>
+	<div id="slider" class="owl-carousel">	
+		<% L = posts.length; for (var i=0; i< L; i++) { %>
+		<div class="each-post">
+			<div class="image" style="background: url(<%- posts[i].image %>); no-repeat;">
+			</div>
+			<div class="title"><%- posts[i].title %></div>
+		</div>
+		<% } %>
+	</div>
 </div>
 
 <style>
 	div.post {
-		padding: 10px 20px;
+		/*padding: 10px 20px;*/
 	}
 	h1.title {
-		font: 20px/22px 'RobCondBold';
+		font: 22px/24px 'RobCondBold';
+		padding: 10px 20px;
+		background: white;
+		margin-top: 0;
+		box-shadow: 0 2px 3px rgba(0,0,0,.13);
 	}
 	div.content {
 		font: 16px/20px 'RobCondLight';
-		margin: 10px 0;
+		position: relative;
+		z-index: 9;
+		margin: 10px 0 0;
+		padding: 0 20px 20px;
+		box-shadow: 0 2px 3px rgba(0,0,0,.13);
 	}
-	.post p {
-		margin: 10px 0px;
+	.post .content p {
+		margin: 10px 0;
 	}
 	.post h2, .post h3 {
 		font: 18px/22px 'RobCondBold';
@@ -35,6 +67,12 @@
 	.post img {
 		width: 280px !important;
 		height: 230px;
+	}
+	.post .image-title {
+		height: 260px;
+		width: 320px;
+		background-position: center center;
+		background-size: cover;
 	}
 	.post .info {
 		font-family: 'RobCondBold';
@@ -45,6 +83,35 @@
 	}
 	.post .info .views {
 		padding-left: 10px;
+	}
+	.popular {
+		background-color: white;
+		padding: 10px 20px 40px;
+	}
+	.popular .title-tag {
+		color: #4D42FF;
+		margin: 0;
+		padding: 0;
+		font: 24px/28px 'RobCondBold';
+	}
+	/*.popular .each-post {
+		border-radius: 4px;
+	}*/
+	.popular #slider {
+		margin-top: 20px;
+		border-radius: 4px;
+		overflow: hidden;
+	}
+	.popular .each-post .image {
+		background-size: cover;
+		background-position: center center;
+		height: 200px;
+		margin-bottom: 10px;
+		border-bottom: 4px solid #FFB52E;
+	}
+	.popular .each-post .title {
+		font: 20px/24px 'RobCondBold';
+		padding: 3px 10px;
 	}
 
 </style>
