исправлены картинки на мобиле

--- a/views/content-mobile.ejs
+++ b/views/content-mobile.ejs
@@ -30,7 +30,7 @@
 	<div id="slider" class="owl-carousel">	
 		<% L = posts.length; for (var i=0; i< L; i++) { %>
 		<div class="each-post">
-			<div class="image" style="background: url(<%- posts[i].image %>); no-repeat;">
+			<div class="image" style="background-image: url(<%- posts[i].image %>);">
 			</div>
 			<div class="title"><%- posts[i].title %></div>
 		</div>
