--- a/views/meta_index.ejs
+++ b/views/meta_index.ejs
@@ -1,3 +1,7 @@
+<% if (ajax) { %>
+	<meta name="fragment" content="!">
+<% } %>
+
 <meta name="robots" content="index,follow" />
 <meta name="title" content="Твой Космос | Новостное научно-популярное издание о науке и космосе"/>
 <meta name="description" content="Современное интернет издание, ежедневно выпускающее эксклюзивные научно-популярные новости" />
