добавлена индексация для яндекса и гугла с _escaped_fragment_

--- a/views/base-mobile.ejs
+++ b/views/base-mobile.ejs
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=320, user-scalable=0">
 	<meta charset="UTF-8">
+	<%- blocks.meta %>
 	<link rel="stylesheet" href="/stylesheets/fonts.css">
 	<%- scripts %>
 	<%- stylesheets %>
