--- a/views/content-mobile.ejs
+++ b/views/content-mobile.ejs
@@ -5,6 +5,8 @@
 <% stylesheet("/libs/fontawesome/css/font-awesome.min.css") -%>
 <% stylesheet("/libs/owl-carousel/owl-carousel/owl.carousel.css") -%>
 <% stylesheet("/libs/owl-carousel/owl-carousel/owl.theme.css") -%>
+<% block('meta', partial('meta')) -%>
+
 
 <script>
 	$(document).ready(function() {
