--- a/views/index-mobile.ejs
+++ b/views/index-mobile.ejs
@@ -1,4 +1,5 @@
 <%- layout('base-mobile') %>
+<% block('meta', partial('meta_index')) -%>
 
 <div class="content">
 	<% L = news.length; for (var i=0; i< L; i++) { %>
