баг с отображением views

--- a/views/index-no-ajax.ejs
+++ b/views/index-no-ajax.ejs
@@ -24,7 +24,7 @@
 					<div class="views">
 						<span>	
 							<span class="fa fa-eye"></span>
-							<span><%- news.views %></span>
+							<span><%- news[i].views %></span>
 						</span>
 					</div>
 			 	</div>
