--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -135,7 +135,7 @@ div.page .misc {
 	margin: 5px 0 0 0;
 	clear: both;
 }
-span.social_share {
+span.social_share, span.update_button {
 	height: 30px;
 	width: 30px;
 	line-height: 30px;
@@ -144,7 +144,7 @@ span.social_share {
 	float: left;
 	margin-right: 3px;
 }
-span.social_share:hover {
+span.social_share:hover, span.update_button:hover {
 	opacity: 0.8;
 }
 span.fa-facebook {
@@ -155,6 +155,9 @@ span.fa-vk {
 }
 span.fa-twitter {
 	background-color: #4099FF;
+}
+span.fa-key {
+	background-color: #059248;
 }
 div.after-text-advice {
 	line-height: 25px;
