--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -51,7 +51,8 @@ news.s22 {
 	border-bottom: 4px solid transparent;
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
-	transition: 0.2s;	
+	transition: 0.2s;
+	z-index: 9999;	
 }
 .inner-container:hover .hover-stater {
 	border-top: 4px solid #FFB52E;
