--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -120,12 +120,58 @@ button.highlighted {
 	padding: 15px;
 	border: 1px solid #ddd;
 }
-.search-linked-news > input, .search-linked-news select {
-	width: 49%;
+.search-linked-news .search-panel > input, 
+.search-linked-news .search-panel > select, 
+.search-linked-news .search-panel > button {
+	width: 45%;
+	float: left;
 }
 .search-linked-news .search-linked-results {
 	border: 1px solid #ddd;
 	width: 100%;
 	height: 330px;
 	margin-top: 10px;
+	clear: left;
+	padding: 10px;
+}
+.search-linked-news .search-panel .search-linked-button {
+	width: 10%;
+	display: inline-block;
+	height: 30px;
+	background-color: blue;
+	color: white; 
+	border: none;
+	outline : none;
+	text-align: center;
+	font-size: 20px;
+	line-height: 30px;
+}
+.each-search-linked-result {
+	height: 40px;
+	margin-bottom: 4px;
+	padding: 3px;
+}
+.each-search-linked-result p {
+	margin: 2px;
+	padding: 0;
+}
+.each-search-linked-result .linked-search-info {
+	float: left;
+	width: 470px;
+	padding: 0 10px
+}
+.linked-search-info .linked-search-title {
+	font-family: 'RobCondBold';
+	font-size: 15px;
+}
+.linked-search-info .linked-search-description {
+	font-family: 'RobCondLight';
+	font-size: 12px;
+}
+.each-search-linked-result .linked-search-image {
+	background-size: cover;
+	background-position: center center;
+	width: 50px;
+	height: 40px;
+	float: left;
 }
