добавлен футер и стата лайфжорнал

--- a/views/footer-mobile.ejs
+++ b/views/footer-mobile.ejs
@@ -1,25 +1,34 @@
 <% stylesheet('/stylesheets/footer.css') -%>
+<style>
+	footer {
+		height: 180px;
+		line-height: 30px;
+	}
+	footer .info, footer > span {
+		padding: 0 30px;
+		margin: 20px 0;
+		position: relative;
+		box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		width: 100%
+	} 
+
+</style>
+
 <footer>
-	<div class="nav">
-		<span>
-			<span><a href="/about">О проекте</a></span>
-			<span><a href="/contacts">Контакты</a></span>
-		</span>
-	</div>
+	
 	<div class="info">
 		<span>
 			<p style="margin-bottom:5px">ТВОЙ КОСМОС</p>
 			<span>&copy; 2014 Твой Космос. Научно-популярное интернет-издание о событиях в сфере физики, космоса и технологии. Все права на тексты принадлежат изданию.</span>
 		</span>
 	</div>
-	<div class="metric">
+
+	<span>
 		<!-- Yandex.Metrika informer --><a href="https://metrika.yandex.ru/stat/?id=26010921&amp;from=informer" target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/26010921/3_0_FFD54EFF_FFB52EFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a><!-- /Yandex.Metrika informer -->
-
 		<!--LiveInternet counter--><script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script><!--/LiveInternet-->
-	</div>
+	</span>
 
-	<!-- <span class="warp">
-		ВАРП НАВЕРХ
-	</span> -->
 
 </footer>
