--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,8 +2,8 @@
 
 <div class="about">
 	<p>О ПРОЕКТЕ</p>
-	<p class="mission">Интернет-издание Твой космос было создано в конце августа 2014 года. Своей миссией мы считаем привнесение в жизнь общества новой ветви интересов, каких как открытия и разработки в сфере космоса, технологических инноваций, а так же физики и тесно связанных с ней дисциплин.</p>
-	<p style="margin-top: 40px">ВОЗМОЖНОСТЬ РАДОВАТЬ ЧИТАТЕЛЕЙ САЙТУ ДАЛИ</p>
+	<p class="mission">Интернет-издание Твой космос было создано в конце августа 2014 года. Своей миссией мы считаем привнесение в жизнь общества новой ветви интересов, таких как открытия и разработки в сфере космоса, технологических инноваций, а так же физики и тесно связанных с ней дисциплин.</p>
+	<p style="margin-top: 40px">ВОЗМОЖНОСТЬ САЙТУ РАДОВАТЬ ЧИТАТЕЛЕЙ ДАЛИ</p>
 	<div>
 		<p class="phone">+7 ( 909 ) 695 27 23</p>
 		<p class="usr">Антонов Филипп</p>
@@ -23,7 +23,7 @@
 	.about {
 		width: 100%;
 		text-align: center;
-		padding: 50px 0 0;
+		padding: 50px 0 50px;
 	}
 	.about > p {
 		font-family: 'RobCondBold';
