--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 
 <div class="about">
 	<p>О ПРОЕКТЕ</p>
-	<p class="mission">Интернет-издание Твой космос было создано в конце августа 2014 года. Своей миссией мы считаем привнесение в жизнь общества новой ветви интересов, таких как открытия и разработки в сфере космоса, технологических инноваций, а так же физики и тесно связанных с ней дисциплин.</p>
+	<p class="mission">Интернет-издание Твой Космос было создано в конце августа 2014 года. Своей миссией мы считаем привнесение в жизнь общества новой ветви интересов, таких как открытия и разработки в сфере космоса, технологических инноваций, а так же физики и тесно связанных с ней дисциплин.</p>
 	<p style="margin-top: 40px">ВОЗМОЖНОСТЬ САЙТУ РАДОВАТЬ ЧИТАТЕЛЕЙ ДАЛИ</p>
 	<div>
 		<p class="phone">+7 ( 909 ) 695 27 23</p>
